// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Order Component renders correctly 1`] = `
<div
  className="contain"
>
  <header
    className="header"
  >
    <Connect(Nav) />
  </header>
  <div
    className="flexbox"
  >
    <Greeting
      firstName="user"
      isCaterer={true}
    />
    <button
      className="btn title-button"
      disabled={true}
      onClick={[Function]}
    >
      <p
        className="cart-notification"
      >
        Cart
        <span
          className="badge"
        >
          0
        </span>
      </p>
    </button>
  </div>
  <div
    className="row"
  >
    <main
      className="col s12"
    >
      <ToastContainer
        autoClose={2000}
        bodyClassName={null}
        className={null}
        closeButton={
          <CloseButton
            ariaLabel="close"
          />
        }
        closeOnClick={true}
        draggable={true}
        draggablePercent={80}
        hideProgressBar={false}
        newestOnTop={false}
        pauseOnHover={true}
        pauseOnVisibilityChange={true}
        position="top-right"
        progressClassName={null}
        rtl={false}
        style={null}
        toastClassName={null}
        transition={[Function]}
      />
      <AccordionWrapper
        accordion={true}
        className="accordion"
        onChange={[Function]}
      >
        <AccordionItemWrapper
          accordionStore={
            AccordionContainer {
              "_listeners": Array [],
              "state": Object {
                "accordion": true,
                "items": Array [],
                "onChange": [Function],
              },
            }
          }
          className="accordion__item"
          disabled={false}
          expanded={true}
          hideBodyClassName=""
        >
          <AccordionItemTitleWrapper
            className="accordion__title"
            hideBodyClassName=""
          >
            <div
              className="title-element flexbox"
            >
              <h4
                className="long_string"
              >
                Today's Menu
              </h4>
              <div
                className="accordion__arrow u-position-relative"
                role="presentation"
              />
            </div>
          </AccordionItemTitleWrapper>
          <AccordionItemBodyWrapper
            className="accordion__body"
            hideBodyClassName="accordion__body--hidden"
          >
            <div
              className="flexbox"
            >
              <Search
                caseSensitive={false}
                className="search-input input-field"
                fuzzy={false}
                onChange={[Function]}
                throttle={200}
              />
            </div>
            <MealCardContainer
              MealCard={[Function]}
              addClass="scroll"
              addToCollection={[Function]}
              collection="cart"
              meals={
                Array [
                  Object {
                    "id": "abc",
                    "price": 1200,
                  },
                  Object {
                    "id": "def",
                    "price": 2000,
                  },
                ]
              }
            />
          </AccordionItemBodyWrapper>
        </AccordionItemWrapper>
        <AccordionItemWrapper
          accordionStore={
            AccordionContainer {
              "_listeners": Array [],
              "state": Object {
                "accordion": true,
                "items": Array [],
                "onChange": [Function],
              },
            }
          }
          className="accordion__item"
          disabled={false}
          expanded={false}
          hideBodyClassName=""
        >
          <AccordionItemTitleWrapper
            className="accordion__title"
            hideBodyClassName=""
          >
            <div
              className="title-element flexbox"
            >
              <h4
                className="long_string"
              >
                Your Order History
              </h4>
              <div
                className="accordion__arrow u-position-relative"
                role="presentation"
              />
            </div>
          </AccordionItemTitleWrapper>
          <AccordionItemBodyWrapper
            className="accordion__body"
            hideBodyClassName="accordion__body--hidden"
          >
            <p
              className="mr-auto"
            >
              Orders can only be edited up to 
                    15
                     minutes after order is placed
            </p>
            <OrderTableContainer
              addOrderToCart={[Function]}
              currentOrderId=""
              defaultPage={0}
              getOrderMeals={[Function]}
              getOrderMealsTotals={[Function]}
              loading={false}
              onFetchData={[Function]}
              orders={
                Array [
                  Object {
                    "Meals": Array [
                      Object {
                        "MealOrders": Object {
                          "quantity": 2,
                        },
                        "id": "abc",
                        "price": 1200,
                      },
                      Object {
                        "MealOrders": Object {
                          "quantity": 2,
                        },
                        "id": "def",
                        "price": 2000,
                      },
                    ],
                    "User": Object {
                      "email": "asdf",
                      "firstName": "first",
                      "lastName": "last",
                    },
                    "id": "order1",
                    "updatedAt": "2018-08-24T16:47:55.783Z",
                    "userId": "userId",
                  },
                  Object {
                    "Meals": Array [
                      Object {
                        "MealOrders": Object {
                          "quantity": 2,
                        },
                        "id": "abc",
                        "price": 1200,
                      },
                      Object {
                        "MealOrders": Object {
                          "quantity": 2,
                        },
                        "id": "def",
                        "price": 2000,
                      },
                    ],
                    "User": Object {
                      "email": "asdf",
                      "firstName": "first",
                      "lastName": "last",
                    },
                    "id": "order2",
                    "updatedAt": "2018-08-24T16:47:55.783Z",
                    "userId": "userId",
                  },
                ]
              }
              pagination={
                Object {
                  "limit": 10,
                  "offset": 0,
                  "pages": 1,
                }
              }
            />
          </AccordionItemBodyWrapper>
        </AccordionItemWrapper>
      </AccordionWrapper>
    </main>
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      className="modal-content"
      closeTimeoutMS={0}
      contentLabel="Input Modal"
      isOpen={false}
      onRequestClose={[Function]}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
    >
      <aside
        className="col s12"
      >
        <div>
          <h3>
            Order Cart
          </h3>
          <p>
            No orders here. Select a meal and click the Add to Cart button
          </p>
        </div>
      </aside>
    </Modal>
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      className="modal-content"
      closeTimeoutMS={0}
      contentLabel="Input Modal"
      isOpen={false}
      onRequestClose={[Function]}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
      style={
        Object {
          "content": Object {
            "width": "60%",
          },
        }
      }
    >
      <MealsTable
        closeMealDetailModal={[Function]}
        getTrProps={[Function]}
        loading={false}
        meals={
          Array [
            Object {
              "id": "abc",
              "price": 1200,
            },
            Object {
              "id": "def",
              "price": 2000,
            },
          ]
        }
        mealsPagination={
          Object {
            "limit": 5,
            "offset": 0,
            "pages": 1,
          }
        }
        onFetchData={[Function]}
        total={0}
      />
    </Modal>
  </div>
</div>
`;

exports[`Order Component renders correctly 2`] = `
<div
  className="contain"
>
  <header
    className="header"
  >
    <Connect(Nav) />
  </header>
  <div
    className="flexbox"
  >
    <Greeting
      firstName="user"
      isCaterer={true}
    />
    <button
      className="btn title-button"
      disabled={true}
      onClick={[Function]}
    >
      <p
        className="cart-notification"
      >
        Cart
        <span
          className="badge"
        >
          0
        </span>
      </p>
    </button>
  </div>
  <div
    className="row"
  >
    <main
      className="col s12"
    >
      <ToastContainer
        autoClose={2000}
        bodyClassName={null}
        className={null}
        closeButton={
          <CloseButton
            ariaLabel="close"
          />
        }
        closeOnClick={true}
        draggable={true}
        draggablePercent={80}
        hideProgressBar={false}
        newestOnTop={false}
        pauseOnHover={true}
        pauseOnVisibilityChange={true}
        position="top-right"
        progressClassName={null}
        rtl={false}
        style={null}
        toastClassName={null}
        transition={[Function]}
      />
      <AccordionWrapper
        accordion={true}
        className="accordion"
        onChange={[Function]}
      >
        <AccordionItemWrapper
          accordionStore={
            AccordionContainer {
              "_listeners": Array [],
              "state": Object {
                "accordion": true,
                "items": Array [],
                "onChange": [Function],
              },
            }
          }
          className="accordion__item"
          disabled={false}
          expanded={true}
          hideBodyClassName=""
        >
          <AccordionItemTitleWrapper
            className="accordion__title"
            hideBodyClassName=""
          >
            <div
              className="title-element flexbox"
            >
              <h4
                className="long_string"
              >
                Today's Menu
              </h4>
              <div
                className="accordion__arrow u-position-relative"
                role="presentation"
              />
            </div>
          </AccordionItemTitleWrapper>
          <AccordionItemBodyWrapper
            className="accordion__body"
            hideBodyClassName="accordion__body--hidden"
          >
            <div
              className="flexbox"
            >
              <Search
                caseSensitive={false}
                className="search-input input-field"
                fuzzy={false}
                onChange={[Function]}
                throttle={200}
              />
            </div>
            <div>
              The menu for the day has not been set
            </div>
          </AccordionItemBodyWrapper>
        </AccordionItemWrapper>
        <AccordionItemWrapper
          accordionStore={
            AccordionContainer {
              "_listeners": Array [],
              "state": Object {
                "accordion": true,
                "items": Array [],
                "onChange": [Function],
              },
            }
          }
          className="accordion__item"
          disabled={false}
          expanded={false}
          hideBodyClassName=""
        >
          <AccordionItemTitleWrapper
            className="accordion__title"
            hideBodyClassName=""
          >
            <div
              className="title-element flexbox"
            >
              <h4
                className="long_string"
              >
                Your Order History
              </h4>
              <div
                className="accordion__arrow u-position-relative"
                role="presentation"
              />
            </div>
          </AccordionItemTitleWrapper>
          <AccordionItemBodyWrapper
            className="accordion__body"
            hideBodyClassName="accordion__body--hidden"
          >
            <p
              className="mr-auto"
            >
              Orders can only be edited up to 
                    15
                     minutes after order is placed
            </p>
            <OrderTableContainer
              addOrderToCart={[Function]}
              currentOrderId=""
              defaultPage={0}
              getOrderMeals={[Function]}
              getOrderMealsTotals={[Function]}
              loading={false}
              onFetchData={[Function]}
              orders={
                Array [
                  Object {
                    "Meals": Array [
                      Object {
                        "MealOrders": Object {
                          "quantity": 2,
                        },
                        "id": "abc",
                        "price": 1200,
                      },
                      Object {
                        "MealOrders": Object {
                          "quantity": 2,
                        },
                        "id": "def",
                        "price": 2000,
                      },
                    ],
                    "User": Object {
                      "email": "asdf",
                      "firstName": "first",
                      "lastName": "last",
                    },
                    "id": "order1",
                    "updatedAt": "2018-08-24T16:47:55.783Z",
                    "userId": "userId",
                  },
                  Object {
                    "Meals": Array [
                      Object {
                        "MealOrders": Object {
                          "quantity": 2,
                        },
                        "id": "abc",
                        "price": 1200,
                      },
                      Object {
                        "MealOrders": Object {
                          "quantity": 2,
                        },
                        "id": "def",
                        "price": 2000,
                      },
                    ],
                    "User": Object {
                      "email": "asdf",
                      "firstName": "first",
                      "lastName": "last",
                    },
                    "id": "order2",
                    "updatedAt": "2018-08-24T16:47:55.783Z",
                    "userId": "userId",
                  },
                ]
              }
              pagination={
                Object {
                  "limit": 10,
                  "offset": 0,
                  "pages": 1,
                }
              }
            />
          </AccordionItemBodyWrapper>
        </AccordionItemWrapper>
      </AccordionWrapper>
    </main>
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      className="modal-content"
      closeTimeoutMS={0}
      contentLabel="Input Modal"
      isOpen={false}
      onRequestClose={[Function]}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
    >
      <aside
        className="col s12"
      >
        <div>
          <h3>
            Order Cart
          </h3>
          <p>
            No orders here. Select a meal and click the Add to Cart button
          </p>
        </div>
      </aside>
    </Modal>
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      className="modal-content"
      closeTimeoutMS={0}
      contentLabel="Input Modal"
      isOpen={false}
      onRequestClose={[Function]}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
      style={
        Object {
          "content": Object {
            "width": "60%",
          },
        }
      }
    >
      <MealsTable
        closeMealDetailModal={[Function]}
        getTrProps={[Function]}
        loading={false}
        meals={
          Array [
            Object {
              "id": "abc",
              "price": 1200,
            },
            Object {
              "id": "def",
              "price": 2000,
            },
          ]
        }
        mealsPagination={
          Object {
            "limit": 5,
            "offset": 0,
            "pages": 1,
          }
        }
        onFetchData={[Function]}
        total={0}
      />
    </Modal>
  </div>
</div>
`;

exports[`Order Component renders correctly 3`] = `
<div
  className="contain"
>
  <header
    className="header"
  >
    <Connect(Nav) />
  </header>
  <div
    className="flexbox"
  >
    <Greeting
      firstName="user"
      isCaterer={true}
    />
    <button
      className="btn title-button"
      disabled={true}
      onClick={[Function]}
    >
      <p
        className="cart-notification"
      >
        Cart
        <span
          className="badge"
        >
          0
        </span>
      </p>
    </button>
  </div>
  <div
    className="row"
  >
    <main
      className="col s12"
    >
      <ToastContainer
        autoClose={2000}
        bodyClassName={null}
        className={null}
        closeButton={
          <CloseButton
            ariaLabel="close"
          />
        }
        closeOnClick={true}
        draggable={true}
        draggablePercent={80}
        hideProgressBar={false}
        newestOnTop={false}
        pauseOnHover={true}
        pauseOnVisibilityChange={true}
        position="top-right"
        progressClassName={null}
        rtl={false}
        style={null}
        toastClassName={null}
        transition={[Function]}
      />
      <AccordionWrapper
        accordion={true}
        className="accordion"
        onChange={[Function]}
      >
        <AccordionItemWrapper
          accordionStore={
            AccordionContainer {
              "_listeners": Array [],
              "state": Object {
                "accordion": true,
                "items": Array [],
                "onChange": [Function],
              },
            }
          }
          className="accordion__item"
          disabled={false}
          expanded={true}
          hideBodyClassName=""
        >
          <AccordionItemTitleWrapper
            className="accordion__title"
            hideBodyClassName=""
          >
            <div
              className="title-element flexbox"
            >
              <h4
                className="long_string"
              >
                Today's Menu
              </h4>
              <div
                className="accordion__arrow u-position-relative"
                role="presentation"
              />
            </div>
          </AccordionItemTitleWrapper>
          <AccordionItemBodyWrapper
            className="accordion__body"
            hideBodyClassName="accordion__body--hidden"
          >
            <div
              className="flexbox"
            >
              <Search
                caseSensitive={false}
                className="search-input input-field"
                fuzzy={false}
                onChange={[Function]}
                throttle={200}
              />
            </div>
            <MealCardContainer
              MealCard={[Function]}
              addClass="scroll"
              addToCollection={[Function]}
              collection="cart"
              meals={
                Array [
                  Object {
                    "id": "abc",
                    "price": 1200,
                  },
                  Object {
                    "id": "def",
                    "price": 2000,
                  },
                ]
              }
            />
          </AccordionItemBodyWrapper>
        </AccordionItemWrapper>
        <AccordionItemWrapper
          accordionStore={
            AccordionContainer {
              "_listeners": Array [],
              "state": Object {
                "accordion": true,
                "items": Array [],
                "onChange": [Function],
              },
            }
          }
          className="accordion__item"
          disabled={false}
          expanded={false}
          hideBodyClassName=""
        >
          <AccordionItemTitleWrapper
            className="accordion__title"
            hideBodyClassName=""
          >
            <div
              className="title-element flexbox"
            >
              <h4
                className="long_string"
              >
                Your Order History
              </h4>
              <div
                className="accordion__arrow u-position-relative"
                role="presentation"
              />
            </div>
          </AccordionItemTitleWrapper>
          <AccordionItemBodyWrapper
            className="accordion__body"
            hideBodyClassName="accordion__body--hidden"
          >
            <p
              className="mr-auto"
            >
              Orders can only be edited up to 
                    15
                     minutes after order is placed
            </p>
            <div>
              You have not placed an order today
            </div>
          </AccordionItemBodyWrapper>
        </AccordionItemWrapper>
      </AccordionWrapper>
    </main>
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      className="modal-content"
      closeTimeoutMS={0}
      contentLabel="Input Modal"
      isOpen={false}
      onRequestClose={[Function]}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
    >
      <aside
        className="col s12"
      >
        <div>
          <h3>
            Order Cart
          </h3>
          <p>
            No orders here. Select a meal and click the Add to Cart button
          </p>
        </div>
      </aside>
    </Modal>
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      className="modal-content"
      closeTimeoutMS={0}
      contentLabel="Input Modal"
      isOpen={false}
      onRequestClose={[Function]}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
      style={
        Object {
          "content": Object {
            "width": "60%",
          },
        }
      }
    >
      <MealsTable
        closeMealDetailModal={[Function]}
        getTrProps={[Function]}
        loading={false}
        meals={
          Array [
            Object {
              "id": "abc",
              "price": 1200,
            },
            Object {
              "id": "def",
              "price": 2000,
            },
          ]
        }
        mealsPagination={
          Object {
            "limit": 5,
            "offset": 0,
            "pages": 1,
          }
        }
        onFetchData={[Function]}
        total={0}
      />
    </Modal>
  </div>
</div>
`;

exports[`Order Component renders correctly 4`] = `
<div
  className="contain"
>
  <header
    className="header"
  >
    <Connect(Nav) />
  </header>
  <div
    className="flexbox"
  >
    <Greeting
      firstName="user"
      isCaterer={true}
    />
    <button
      className="btn title-button"
      disabled={true}
      onClick={[Function]}
    >
      <p
        className="cart-notification"
      >
        Cart
        <span
          className="badge"
        >
          0
        </span>
      </p>
    </button>
  </div>
  <div
    className="row"
  >
    <main
      className="col s12"
    >
      <ToastContainer
        autoClose={2000}
        bodyClassName={null}
        className={null}
        closeButton={
          <CloseButton
            ariaLabel="close"
          />
        }
        closeOnClick={true}
        draggable={true}
        draggablePercent={80}
        hideProgressBar={false}
        newestOnTop={false}
        pauseOnHover={true}
        pauseOnVisibilityChange={true}
        position="top-right"
        progressClassName={null}
        rtl={false}
        style={null}
        toastClassName={null}
        transition={[Function]}
      />
      <AccordionWrapper
        accordion={true}
        className="accordion"
        onChange={[Function]}
      >
        <AccordionItemWrapper
          accordionStore={
            AccordionContainer {
              "_listeners": Array [],
              "state": Object {
                "accordion": true,
                "items": Array [],
                "onChange": [Function],
              },
            }
          }
          className="accordion__item"
          disabled={false}
          expanded={true}
          hideBodyClassName=""
        >
          <AccordionItemTitleWrapper
            className="accordion__title"
            hideBodyClassName=""
          >
            <div
              className="title-element flexbox"
            >
              <h4
                className="long_string"
              >
                Today's Menu
              </h4>
              <div
                className="accordion__arrow u-position-relative"
                role="presentation"
              />
            </div>
          </AccordionItemTitleWrapper>
          <AccordionItemBodyWrapper
            className="accordion__body"
            hideBodyClassName="accordion__body--hidden"
          >
            <div
              className="flexbox"
            >
              <Search
                caseSensitive={false}
                className="search-input input-field"
                fuzzy={false}
                onChange={[Function]}
                throttle={200}
              />
            </div>
            <div>
              The menu for the day has not been set
            </div>
          </AccordionItemBodyWrapper>
        </AccordionItemWrapper>
        <AccordionItemWrapper
          accordionStore={
            AccordionContainer {
              "_listeners": Array [],
              "state": Object {
                "accordion": true,
                "items": Array [],
                "onChange": [Function],
              },
            }
          }
          className="accordion__item"
          disabled={false}
          expanded={false}
          hideBodyClassName=""
        >
          <AccordionItemTitleWrapper
            className="accordion__title"
            hideBodyClassName=""
          >
            <div
              className="title-element flexbox"
            >
              <h4
                className="long_string"
              >
                Your Order History
              </h4>
              <div
                className="accordion__arrow u-position-relative"
                role="presentation"
              />
            </div>
          </AccordionItemTitleWrapper>
          <AccordionItemBodyWrapper
            className="accordion__body"
            hideBodyClassName="accordion__body--hidden"
          >
            <p
              className="mr-auto"
            >
              Orders can only be edited up to 
                    15
                     minutes after order is placed
            </p>
            <div>
              You have not placed an order today
            </div>
          </AccordionItemBodyWrapper>
        </AccordionItemWrapper>
      </AccordionWrapper>
    </main>
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      className="modal-content"
      closeTimeoutMS={0}
      contentLabel="Input Modal"
      isOpen={false}
      onRequestClose={[Function]}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
    >
      <aside
        className="col s12"
      >
        <div>
          <h3>
            Order Cart
          </h3>
          <p>
            No orders here. Select a meal and click the Add to Cart button
          </p>
        </div>
      </aside>
    </Modal>
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      className="modal-content"
      closeTimeoutMS={0}
      contentLabel="Input Modal"
      isOpen={false}
      onRequestClose={[Function]}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
      style={
        Object {
          "content": Object {
            "width": "60%",
          },
        }
      }
    >
      <MealsTable
        closeMealDetailModal={[Function]}
        getTrProps={[Function]}
        loading={false}
        meals={
          Array [
            Object {
              "id": "abc",
              "price": 1200,
            },
            Object {
              "id": "def",
              "price": 2000,
            },
          ]
        }
        mealsPagination={
          Object {
            "limit": 5,
            "offset": 0,
            "pages": 1,
          }
        }
        onFetchData={[Function]}
        total={0}
      />
    </Modal>
  </div>
</div>
`;

exports[`Order Component renders correctly 5`] = `
<div
  className="contain"
>
  <header
    className="header"
  >
    <Connect(Nav) />
  </header>
  <div
    className="flexbox"
  >
    <Greeting
      firstName="user"
      isCaterer={true}
    />
    <button
      className="btn title-button"
      disabled={true}
      onClick={[Function]}
    >
      <p
        className="cart-notification"
      >
        Cart
        <span
          className="badge"
        >
          0
        </span>
      </p>
    </button>
  </div>
  <div
    className="row"
  >
    <main
      className="col s12"
    >
      <ToastContainer
        autoClose={2000}
        bodyClassName={null}
        className={null}
        closeButton={
          <CloseButton
            ariaLabel="close"
          />
        }
        closeOnClick={true}
        draggable={true}
        draggablePercent={80}
        hideProgressBar={false}
        newestOnTop={false}
        pauseOnHover={true}
        pauseOnVisibilityChange={true}
        position="top-right"
        progressClassName={null}
        rtl={false}
        style={null}
        toastClassName={null}
        transition={[Function]}
      />
      <AccordionWrapper
        accordion={true}
        className="accordion"
        onChange={[Function]}
      >
        <AccordionItemWrapper
          accordionStore={
            AccordionContainer {
              "_listeners": Array [],
              "state": Object {
                "accordion": true,
                "items": Array [],
                "onChange": [Function],
              },
            }
          }
          className="accordion__item"
          disabled={false}
          expanded={true}
          hideBodyClassName=""
        >
          <AccordionItemTitleWrapper
            className="accordion__title"
            hideBodyClassName=""
          >
            <div
              className="title-element flexbox"
            >
              <h4
                className="long_string"
              >
                Today's Menu
              </h4>
              <div
                className="accordion__arrow u-position-relative"
                role="presentation"
              />
            </div>
          </AccordionItemTitleWrapper>
          <AccordionItemBodyWrapper
            className="accordion__body"
            hideBodyClassName="accordion__body--hidden"
          >
            <div
              className="flexbox"
            >
              <Search
                caseSensitive={false}
                className="search-input input-field"
                fuzzy={false}
                onChange={[Function]}
                throttle={200}
              />
            </div>
            <MealCardContainer
              MealCard={[Function]}
              addClass="scroll"
              addToCollection={[Function]}
              collection="cart"
              meals={
                Array [
                  Object {
                    "id": "abc",
                    "price": 1200,
                  },
                  Object {
                    "id": "def",
                    "price": 2000,
                  },
                ]
              }
            />
          </AccordionItemBodyWrapper>
        </AccordionItemWrapper>
        <AccordionItemWrapper
          accordionStore={
            AccordionContainer {
              "_listeners": Array [],
              "state": Object {
                "accordion": true,
                "items": Array [],
                "onChange": [Function],
              },
            }
          }
          className="accordion__item"
          disabled={false}
          expanded={false}
          hideBodyClassName=""
        >
          <AccordionItemTitleWrapper
            className="accordion__title"
            hideBodyClassName=""
          >
            <div
              className="title-element flexbox"
            >
              <h4
                className="long_string"
              >
                Your Order History
              </h4>
              <div
                className="accordion__arrow u-position-relative"
                role="presentation"
              />
            </div>
          </AccordionItemTitleWrapper>
          <AccordionItemBodyWrapper
            className="accordion__body"
            hideBodyClassName="accordion__body--hidden"
          >
            <p
              className="mr-auto"
            >
              Orders can only be edited up to 
                    15
                     minutes after order is placed
            </p>
            <OrderTableContainer
              addOrderToCart={[Function]}
              currentOrderId=""
              defaultPage={0}
              getOrderMeals={[Function]}
              getOrderMealsTotals={[Function]}
              loading={false}
              onFetchData={[Function]}
              orders={
                Array [
                  Object {
                    "Meals": Array [
                      Object {
                        "MealOrders": Object {
                          "quantity": 2,
                        },
                        "id": "abc",
                        "price": 1200,
                      },
                      Object {
                        "MealOrders": Object {
                          "quantity": 2,
                        },
                        "id": "def",
                        "price": 2000,
                      },
                    ],
                    "User": Object {
                      "email": "asdf",
                      "firstName": "first",
                      "lastName": "last",
                    },
                    "id": "order1",
                    "updatedAt": "2018-08-24T16:47:55.783Z",
                    "userId": "userId",
                  },
                  Object {
                    "Meals": Array [
                      Object {
                        "MealOrders": Object {
                          "quantity": 2,
                        },
                        "id": "abc",
                        "price": 1200,
                      },
                      Object {
                        "MealOrders": Object {
                          "quantity": 2,
                        },
                        "id": "def",
                        "price": 2000,
                      },
                    ],
                    "User": Object {
                      "email": "asdf",
                      "firstName": "first",
                      "lastName": "last",
                    },
                    "id": "order2",
                    "updatedAt": "2018-08-24T16:47:55.783Z",
                    "userId": "userId",
                  },
                ]
              }
              pagination={
                Object {
                  "pages": 1,
                }
              }
            />
          </AccordionItemBodyWrapper>
        </AccordionItemWrapper>
      </AccordionWrapper>
    </main>
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      className="modal-content"
      closeTimeoutMS={0}
      contentLabel="Input Modal"
      isOpen={false}
      onRequestClose={[Function]}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
    >
      <aside
        className="col s12"
      >
        <div>
          <h3>
            Order Cart
          </h3>
          <p>
            No orders here. Select a meal and click the Add to Cart button
          </p>
        </div>
      </aside>
    </Modal>
    <Modal
      ariaHideApp={true}
      bodyOpenClassName="ReactModal__Body--open"
      className="modal-content"
      closeTimeoutMS={0}
      contentLabel="Input Modal"
      isOpen={false}
      onRequestClose={[Function]}
      parentSelector={[Function]}
      portalClassName="ReactModalPortal"
      shouldCloseOnEsc={true}
      shouldCloseOnOverlayClick={true}
      shouldFocusAfterRender={true}
      shouldReturnFocusAfterClose={true}
      style={
        Object {
          "content": Object {
            "width": "60%",
          },
        }
      }
    >
      <MealsTable
        closeMealDetailModal={[Function]}
        getTrProps={[Function]}
        loading={false}
        meals={
          Array [
            Object {
              "id": "abc",
              "price": 1200,
            },
            Object {
              "id": "def",
              "price": 2000,
            },
          ]
        }
        mealsPagination={
          Object {
            "pages": 1,
          }
        }
        onFetchData={[Function]}
        total={0}
      />
    </Modal>
  </div>
</div>
`;
